<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="2dp"
                android:text="@string/sign_up_username"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/sign_up_email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/sign_up_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size"
                android:text="Password"/>

            <TextView
                android:id="@+id/sign_up_password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size"
                android:visibility="gone"/>


            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/sign_up_confirm_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/text_size"
                android:text="Confirm password"/>

            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/login_confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/sign_up_submit"
                style="@style/ButtonStyleFillIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/continue_string"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
