<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <!-- Personal Statement-->
                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/field_perstmt"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/personal_statement"
                        android:textColor="@color/black"
                        android:textSize="13sp" />


                    <EditText
                        android:id="@+id/edit_ps_field"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal|bold" />

                </TableRow>
                <!-- Experience -->
                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/field_exp"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/experience"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/edit_exp_field"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal|bold" />

                </TableRow>
                <!--Skills -->
                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/field_skills"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/skills"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/edit_skills_field"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal|bold" />
                </TableRow>

                <!-- Projects -->
                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/field_projects"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/projects"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/edit_projects_field"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal|bold" />

                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/save_proff"
                style="@style/ButtonStyleFillIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/save_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>